# console_weather

./: .gitignore  CMakeLists.txt  README.md
configs/: art.json  months.json  my_config.json  weather_types.json
lib/: CMakeLists.txt
lib/include/: interface.h  json.h  weather.h
lib/src/: interface.cpp  json.cpp  weather.cpp
